--- a/ИСТбд-22/Енилов Д.А/lab0/отчет.md
+++ b/ИСТбд-22/Енилов Д.А/lab0/отчет.md
@@ -2,4 +2,8 @@
 
 ## Средства и инструменты, используемые для сдачи лаб
 
-При сдаче лабораторных работ я буду использовать visual studio code для написания кода по заданию, github, и git, и source tree для того, чтобы отправить своими лабораторные преподавателю, markdown для написания отчетов к лабораторным работам.
+При сдаче лабораторных работ я буду использовать visual  
+studio code для написания кода по заданию, github, и git,  
+ и source tree для того, чтобы отправить своими лабораторные  
+ преподавателю, markdown для написания отчетов к  
+ лабораторным работам.
