--- a/ИСТбд-22/Енилов Д.А/lab1/отчет.md
+++ b/ИСТбд-22/Енилов Д.А/lab1/отчет.md
@@ -6,7 +6,7 @@
 
 ## Вопрос 2: алгоритм линейного поиска с барьером
 
-Если же мы используем алгоритм линейного поиска с барьером, нам необходимо искусственно добавить искомый элемент-барьер в конец массива. Преимущество такого алгоритма в том, что нам не требуется каждый раз в цикле проверять условие, связанное с границами массива. Барьер ограничивает изменение индекса.
+Если же мы используем алгоритм линейного поиска с барьером, нам необходимо искусственно добавить искомый элемент-барьер в конец массива. Преимущество такого алгоритма в том, что нам не требуется каждый раз в цикле проверять условие, связанное с границами массива. Барьер ограничивает изменение индекса. Поэтому этот алгоритм работает быстрее обычного линейного поиска. 
 
 ## Вопрос 3: алгоритм бинарного поиска
 
@@ -14,4 +14,4 @@
 
 ## Вопрос 4: где применяют данные алгоритмы
 
-Алгоритм бинарного поиска применяют для нахождения экстремума целевой функции и в методе биссекции при решении уравнений. Линейный поиск обычно применяют в случае работы с малыми массивами. Линейный поиск с барьером где применяется не нашел. 
+Алгоритм бинарного поиска применяют для нахождения экстремума целевой функции и в методе биссекции при решении уравнений. Линейный поиск обычно применяют в случае работы с малыми массивами. Предполагаю, что линейный поиск с барьером применяется в случае, когда сортировать массив нецелесообразно и бинарный поиск не подходит. 
