--- a/ISTbd-22/Ushkova A. S/lab2/отчет.md
+++ b/ISTbd-22/Ushkova A. S/lab2/отчет.md
@@ -35,14 +35,13 @@ int main()
 
 Ответы на вопросы
 
-Алгоритм метода пузырька. Алгоритм состоит из повторяющихся проходов по сортируемому массиву. За каждый проход элементы последовательно сравниваются попарно и, если порядок в паре неверный, выполняется обмен элементов. Проходы по массиву повторяются N-1 раз или до тех пор, пока на очередном проходе не окажется, что обмены больше не нужны, что означает — массив отсортирован. При каждом проходе алгоритма по внутреннему циклу, очередной наибольший элемент массива ставится на своё место в конце массива рядом с предыдущим «наибольшим элементом», а наименьший элемент перемещается на одну позицию к началу массива.
+Алгоритм метода пузырька. Алгоритм состоит из повторяющихся проходов по сортируемому массиву. За каждый проход элементы сравниваются попарно, и если порядок неверный, элементы меняются местами. Это продолжается до тех пор, пока массив не будет отсортирован.
 Для понимания и реализации этот алгоритм — простейший, но эффективен он лишь для небольших массивов.
 
-Алгоритм шейкер-сортировки. Шейкер-сортировка является усовершенствованным методом пузырьковой сортировки.Анализируя метод пузырьковой сортировки, можно отметить два обстоятельства.
-Во-первых, если при движении по части массива перестановки не происходят, то эта часть массива уже отсортирована и, следовательно, её можно исключить из рассмотрения.
-Во-вторых, при движении от конца массива к началу минимальный элемент «всплывает» на первую позицию, а максимальный элемент сдвигается только на одну позицию вправо.
+Алгоритм шейкер-сортировки. Шейкер-сортировка - усовершенствованный метод пузырьковой сортировки.В этом методе отсортированные элементы не рассматриваются. При движении от конца массива к началу минимальный элемент переходит на первую позицию, а максимальный элемент сдвигается на одну позицию вправо.
 Для почти отсортированного массива шейкерная сортировка может оказаться намного быстрее «пузырька», но для случайно отсортированного исходного массива выигрыш обычно не сильно велик.
 
-Алгоритм метода перебора. Простейший из методов поиска значений действительно-значных функций по какому-либо из критериев сравнения. Мы ищем наименьший элемент в массиве и перемещаем его на первое место. Затем ищем второй наименьший элемент и перемещаем его уже на второе место после первого наименьшего элемента. Этот процесс продолжается до тех пор, пока в массиве не закончатся неотсортированные элементы. Сортировка массивов методом выбора, пожалуй, самая простая для понимания, хотя и одна из самых медленных.
+Алгоритм метода перебора. Ищем наименьший элемент в массиве и перемещаем его на первую позицию. Затем ищем второй наименьший элемент и перемещаем его на второе место после первого наименьшего элемента. Это продолжается до тех пор, пока массив не будет отсортирован.
+Сортировка массивов методом выбора, пожалуй, самая простая для понимания, хотя и одна из самых медленных.
 
-Алгоритм метода вставок. Алгоритм сортировки, в котором элементы входной последовательности просматриваются по одному, и каждый новый поступивший элемент размещается в подходящее место среди ранее упорядоченных элементов. Метод вставок дает хорошие результаты для упорядоченных входных данных. Многочисленные эксперименты показывают, что метод вставок дает наименьшее время сортировки среди всех простейших методов.
+Алгоритм метода вставок. Суть этого алгоритма заключается в том, что мы берем один из элементов в массиве, и помещаем его на нужную позицию. Многочисленные эксперименты показывают, что метод вставок дает наименьшее время сортировки среди всех простейших методов.
