--- a/ISTbd-22/Tagashev I.I/lab4/отчёт.md
+++ b/ISTbd-22/Tagashev I.I/lab4/отчёт.md
@@ -64,9 +64,9 @@ void heap_sort(int array[], int size) {
 № 3. В чем разница устойчивой и неустойчивой сортировки?    
 Устойчивость сортировки всегда может быть достигнута путём удлинения исходных ключей, если включить в них информацию об первоначальном порядке значений.
 № 4. Достоинства и недостатки  
-Достоинства:  
-· Имеет доказанную оценку худшего случая O.  
-· Требует всего O дополнительной памяти.  
+Оценка по производительности, пользовался доп. ресурсами (https://neerc.ifmo.ru/wiki/index.php?title=Теорема_о_нижней_оценке_для_сортировки_сравнениями).
+O – это от слова Order, то есть порядок.
+Пирамидальная сортировка не использует дополнительной памяти. 
 Недостатки:  
 · Сложен в реализации.  
 · Неустойчив - для обеспечения устойчивости нужно расширять ключ.  
