--- a/ISTbd-22/Tagashev I.I/lab4/отчёт.md
+++ b/ISTbd-22/Tagashev I.I/lab4/отчёт.md
@@ -63,12 +63,9 @@ void heap_sort(int array[], int size) {
 Общая идея пирамидальной сортировки заключается в том, что сначала строится пирамида из элементов исходного массива, а затем осуществляется сортировка элементов.
 № 3. В чем разница устойчивой и неустойчивой сортировки?    
 Устойчивость сортировки всегда может быть достигнута путём удлинения исходных ключей, если включить в них информацию об первоначальном порядке значений.
-№ 4. Достоинства и недостатки  
-Оценка по производительности, пользовался доп. ресурсами (https://neerc.ifmo.ru/wiki/index.php?title=Теорема_о_нижней_оценке_для_сортировки_сравнениями).
-O – это от слова Order, то есть порядок.
-Пирамидальная сортировка не использует дополнительной памяти. 
+№ 4. Достоинства
+* Пирамидальная сортировка не использует дополнительной памяти. 
 Недостатки:  
 · Сложен в реализации.  
 · Неустойчив - для обеспечения устойчивости нужно расширять ключ.  
 · На почти отсортированных массивах работает столь же долго, как и на хаотических данных.  
-· На одном шаге выборку приходится делать хаотично по всей длине массива -- поэтому алгоритм плохо сочетается с кэшированием и подкачкой памяти.
