--- a/ISTbd-22/Tagashev I.I/lab4/отчёт.md
+++ b/ISTbd-22/Tagashev I.I/lab4/отчёт.md
@@ -65,6 +65,11 @@ void heap_sort(int array[], int size) {
 Устойчивость сортировки всегда может быть достигнута путём удлинения исходных ключей, если включить в них информацию об первоначальном порядке значений.
 № 4. Достоинства
 * Пирамидальная сортировка не использует дополнительной памяти. 
+* Имеет доказанную оценку худшего случая O(n*log(n))
+Поянение:
+n - это кол-во элементов для сортировки
+O(1) - использование дополнительной памяти
+Такое выражение сложлось из-за того, что операция siftDown (двоичный поиск) работает за O(log(n)), а весь цикл выполняется (n-1) раз.
 Недостатки:  
 · Сложен в реализации.  
 · Неустойчив - для обеспечения устойчивости нужно расширять ключ.  
