--- a/ISTbd-21/KashitsynaNA/lab1/Отчет.md
+++ b/ISTbd-21/KashitsynaNA/lab1/Отчет.md
@@ -50,16 +50,14 @@ int main()
 ## Ответы на вопросы
 
 - Алгоритм линейного поиска:
-Начиная с первого, все элементы массива последовательно просматриваются и сравниваются с искомым. Если на каком-то шаге текущий элемент окажется равным искомому, тогда элемент считается найденным, и в качестве результата возвращается номер этого элемента, либо другая информация о нем. Далее, в качестве выходных данных будет выступать номер элемента. Иначе, следуют возвратить что-то, что может оповестить о его отсутствии в пройденной последовательности. Имеется вероятность наличия нескольких элементов с одинаковыми значениями, совпадающими со значением ключа. В таком случае, если нет конкретных условий, можно, например, за результирующий взять номер первого найденного элемента, или записать в массив номера всех тождественных элементов.
+Осуществляется проход по массиву. Все элементы последовательно сравниваются с искомым.Если элемент оказывается равным искомому, то он считается найденным. Если такого элемента нет, то необходимо оповестить об этом.
 
 - Алгоритм линейного поиска с барьером:
-Этот алгоритм является модификацией линейного поиска. В конец массива добавляется элемент, который нужно найти (либо заместо последнего). Теперь мы можем пройтись циклом не по всем элементам массива, а до того момента, когда будет найден нужный элемент. Таким образом, среднее время выполнения алгоритма линейного поиска с барьером становится ниже, чем у обычного линейного поиска.
+Аналогичен алгоритму линейного поиска, только в конец массива ставится искомый элемент. Осуществляется проход по массиву до тех пор, пока не найдется элемент, равный искомому.
 
 - Алгоритм двоичного поиска:
-В отличие от линейного поиска, бинарный поиск использует отсортированный список. Для поиска значения вы сначала сравниваете значение со средним элементом списка. Если они равны, значение поиска найдено. Если значение поиска больше, чем средний элемент, выполняется поиск в верхней половине данных. Затем вы сравниваете средний элемент этого раздела со значением поиска. В качестве альтернативы, если элемент меньше среднего элемента, вы ищете в нижней половине списка и сравниваете его среднее значение. Список многократно делится пополам до тех пор, пока элемент не будет найден или не останется элементов для поиска.
+Используется для заранее отсортированного массива. Средний элемент массива сравнивается с искомым. Если они не равны, то поиск продолжается. Если значение искомого элемента больше среднего, то идет поиск в верхней половине данных, сравнивается так же со средним элементом этого раздела; если меньше - то в нижней. Поиск осуществляется до тех пор, пока элемент не будет найден.
 
 - Где используются вышеописанные алгоритмы поиска:
-Недостатком алгоритма линейного поиска является то, что в худшем случае осуществляется просмотр всего массива, что занимает много времени. Поэтому данный алгоритм используется, если множество содержит небольшое количество элементов. Лучше использовать его новичкам для решения их первых задач. 
-Поиск с барьером работает быстрее, но временная сложность алгоритма остается такой же.
-Метод двоичного поиска используется в качестве быстрого варианта поиска в заранее отсортированном массиве.
+Алгорит линейного поиска используется тогда, когда массив содержит небольшое количество элементов, алгоритм линейного поиска с барьером тоже. Алгоритм двоичного поиска используется в заранее отсортированном массиве, где элементов много. 
 
